jboot v2.1.4:
新增：FileUtil在解压缩的时候，对非安全文件进行过滤的功能
优化：重写 Columns 的 toString() 方法，方便进行自动缓存的功能
优化：升级 Guava 依赖到最新版本 v28.0
优化：删除 AOP 缓存是多余的逻辑判断


jboot v2.1.3:
优化：升级 JFinal 到 4.3 最新版本
优化：升级 JFinal-Undertow 到 1.7 最新版本
优化：升级 JFinal-Weixin 到 2.4 最新版本
优化：优化 JbootDbPro ，使之在debug打印sql时更加全面


jboot v2.1.2:
新增：添加 Swagger 的相关测试代码和demo
新增：添加 Websocket 的相关测试代码和demo
优化：重构 ClassScanner ，在 tomcat 环境不去扫码 tomcat 自身的相关jar文件
优化：优化 JbootDbPro，在 Db.update 的时候正常打印相关参数
优化：优化 当不配置 aop 缓存类型时，默认是 ehcache 的问题
优化：优化 Jedis 的 subscribe 监听，当序列化出差时可能异常退出的问题
优化：优化 FileUtil 在对 zip 解压缩时，可能出现恶意构造路线可能导致的安全问题
修复：修复 Jboot Config 配置文档编写错误的问题


jboot v2.1.1:
新增：新增自定义 AOP 的缓存类型的支持
新增：新增缓存类型 caffeine 和 caredis 类型
新增：新增 CacheUtil 工具类，用于更加直接的操作缓存
优化：当开启 findById 自动缓存后，当缓存出错时通过数据库查询数据，而不是直接不可用。
优化：优化限流工具在构造 service 层资源时，在某些极端情况下会操作资源重复的问题。
优化：移除 FlashMessage 模块，该模块使用极少，但可能会造成以资源浪费。
优化：升级 JFinal 到 v4.2 最新版本
优化：升级 Seata 到 0.6.1 最新版本


jboot v2.1.0:
优化：重构 JbootApplication ，使之更加方便灵活。
修复：JbootResourceLoader 在 fatjar 里可能出现空指针异常的问题。
修复：JbootCacheManager/LimiterManager 的 synchronized 不正确的问题。
修复：JbootHttpResponse在 某些情况下可能出现空指针异常的问题。


jboot v2.0.9:
优化：升级分布式事务 fescar 到 seata 0.5.1 最新版本，感谢 @LeonM
优化：当 JbootAopFactory 在多次添加同一个银色的时候移除之前缓存的对象
优化：JbootShiroCacheManager 的注释错误问题
优化：Jboot 的 service 代码生成器生成 impl 时，不指定后缀可能会出错的问题
优化：JbootModel 当根据 id 查询数据，传入一个 null 时，直接返回 null 对象，不进行查询
优化：优化 JbootModel 的错误提示文字错误的问题


jboot v2.0.8:
新增：JBootController 新增 Map<String, String> getParas() 方法，用于获取请求列表
优化：JbootAopFactory 在多次新增 Mapping 同一个的时候，只发出警告而不出异常。
优化：ClassScanner 扫描逻辑，使之更加易于阅读
优化：JbootAopFactory 在进行 RPC 注入的时候，如果出现异常给出具体的注入类，方便排查
优化：优化 AnnotationUtil 代码逻辑，防止在某些特殊情况可能出现空指针异常的问题
修复：@Cacheable.nullCacheEnable 设置无效的问题


jboot v2.0.7:
新增：基于 Seata 的分布式事务，新增对 DBCP, C3P0, BoneCP, HikariCP 和 Tomcat-JDBC 连接池的支持
新增：新增 ClassUtil.buildMethodString() 方法，用于构建方法
优化：优化当使用 @CacheEvict(name="cacheName") 不指定key时，删除所有的key
优化：重构 JbootActionHandler 的错入输出代码
优化：重构 JbootDirectiveBase，当渲染文本错误时，输出行号方便排除
修复：当 RPC 修改为 Local 模式时，在某些特殊情况下无法获取服务的问题